5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1800_2564.log
== SUBMITION (2019-06-06 11:12:53) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1))
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- EXECUTION TIME:
0.85864
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 8
    for i in range(size(time1))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:03) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1))
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- EXECUTION TIME:
1.04447
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 8
    for i in range(size(time1))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:03) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1))
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- EXECUTION TIME:
0.589414
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 8
    for i in range(size(time1))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:07) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1))
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
	print(vet)		
		
		
-- EXECUTION TIME:
0.639334
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 8
    for i in range(size(time1))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:08) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1))
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- ERROR:
File "XXXX", line 8
    for i in range(size(time1))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:26) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- EXECUTION TIME:
0.904061
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[12  0  0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:27) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

vet=zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0]=vet[0]+1
	if time1[i]==time2[i]:
		vet[0]=vet[0]+1
	if time1[i]<time2[i]:
		vet[0]=vet[0]+1
print(vet)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:17:25) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		x[0]=x[0]+1
	if time1[i]==time2[i]:
		x[0]=x[0]+1
	if time1[i]<time2[i]:
		x[0]=x[0]+1
print(x)		
		
		
-- EXECUTION TIME:
1.05026
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[12  0  0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:17:32) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		x[0]=x[0]+1
	if time1[i]==time2[i]:
		x[0]=x[0]+1
	if time1[i]<time2[i]:
		x[0]=x[0]+1
	print(x)		
		
		
-- EXECUTION TIME:
1.03644
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:17:34) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		x[0]=x[0]+1
	if time1[i]==time2[i]:
		x[0]=x[0]+1
	if time1[i]<time2[i]:
		x[0]=x[0]+1
print(x)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:17:37) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if time1[i]>time2[i]:
		x[0]=x[0]+1
	if time1[i]==time2[i]:
		x[0]=x[0]+1
	if time1[i]<time2[i]:
		x[0]=x[0]+1
print(x)		
		
		
-- EXECUTION TIME:
1.03773
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[12  0  0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
n gols time 1:n gols time 2:[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:50) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i]>time2[i]):
			x[0]=x[0]+1
	if (time1[i]==time2[i]):
			x[0]=x[0]+1
	if (time1[i]<time2[i]):
			x[0]=x[0]+1
	print(x)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:20:52) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i]>time2[i]):
			x[0]=x[0]+1
	if (time1[i]==time2[i]):
			x[0]=x[0]+1
	if (time1[i]<time2[i]):
			x[0]=x[0]+1
	print(x)		
		
		
-- EXECUTION TIME:
1.19466
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
n gols time 1:n gols time 2:[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:22:54) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i]>time2[i]):
			x[0]=x[0]+1
	if (time1[i]==time2[i]):
			x[1]=x[1]+1
	if (time1[i]<time2[i]):
			x[2]=x[2]+1
print(x)		
		
		
-- EXECUTION TIME:
0.801041
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
n gols time 1:n gols time 2:[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
n gols time 1:n gols time 2:[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:09) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i]>time2[i]):
			x[0]=x[0]+1
	if (time1[i]==time2[i]):
			x[1]=x[1]+1
	if (time1[i]<time2[i]):
			x[2]=x[2]+1
print(x)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:23:12) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i]>time2[i]):
			x[0]=x[0]+1
	if (time1[i]==time2[i]):
			x[1]=x[1]+1
	if (time1[i]<time2[i]):
			x[2]=x[2]+1
print(x)		
		
		
-- EXECUTION TIME:
0.90907
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
n gols time 1:n gols time 2:[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
n gols time 1:n gols time 2:[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:29) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i] > time2[i]):
			x[0]=x[0]+1
	if (time1[i] == time2[i]):
			x[1]=x[1]+1
	if (time1[i] < time2[i]):
			x[2]= x[2]+1
print(x)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:23:32) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i] > time2[i]):
			x[0]=x[0]+1
	if (time1[i] == time2[i]):
			x[1]=x[1]+1
	if (time1[i] < time2[i]):
			x[2]= x[2]+1
print(x)		
		
		
-- EXECUTION TIME:
1.05806
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
n gols time 1:n gols time 2:[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
n gols time 1:n gols time 2:[12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:24:07) 
-- CODE:
from numpy import*

time1=array(eval(input("n gols time 1:")))
time2=array(eval(input("n gols time 2:")))

x = zeros(3, dtype=int)

for i in range(size(time1)):
	if (time1[i] > time2[i]):
			x[0]=x[0]+1
	if (time1[i] == time2[i]):
			x[1]=x[1]+1
	if (time1[i] < time2[i]):
			x[2]= x[2]+1
print(x)		
		
		
-- EXECUTION TIME:
1.28978
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
